fixed the order here menu on mobile

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -11,7 +11,7 @@ header {
 }
 
 #nav_bolo {
-    font-size: 20px;
+    font-size: 22px;
     color: #ffb3c8;
 }
 
@@ -23,12 +23,13 @@ header {
 
 .nav-item a {
     text-decoration: none;
-    color: #000000;
-    font-weight: 400;
+    color: #1d1d1dad;
+    font-weight: 600;
 }
 
 .nav-item.active a {
-    color: #000000;
+    text-decoration: none;
+    color: #1d1d1d;
     border-bottom: 3px solid #ffb3c8;
 }
 
@@ -45,11 +46,12 @@ header {
     #navbar .btn-default {
         display: none;
     }
+
     #mobile_btn {
-        display: black;
+        display: block;
         border: none;
         background-color: transparent;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         cursor: pointer;
     }
 
@@ -57,6 +59,9 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 20px;
     }
 
     #mobile_nav_list {
@@ -64,10 +69,15 @@ header {
         flex-direction: column;
         gap: 12px;
         margin: 12px 0px;
+        padding: 0;
     }
 
     #mobile_nav_list .nav-item {
         list-style: none;
-        text-align: center;
+    }
+
+    #mobile_menu .btn-default {
+        display: block;
+        margin-top: 20px;
     }
 }
