--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* importando a font usada */
+
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -8,23 +10,24 @@
 }
 
 body {
-    background-color: ##ffffff;
+    background-color: #ffffff; /* cor do fundo */
 }
 
-.btn-default {
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #ffd9e3;
-    border-radius: 12px;
-    padding: 10 14px;
-    font-weight: 600;
-    box-shadow: #ffc6d5;
-    cursor: pointer;
-    transition: background-color .3s ease;
+.btn-default { 
+    border: none; /* remove a borda padrão */
+    display: flex; /* define o tipo do "container" */
+    align-items: center; /* alinha o texto no centro */
+    justify-content: center; /* controla o alinhamento dos itens dentro do "container" */
+    background-color: #ffd9e3;  /* cor do fundo do botão/container */
+    border-radius: 12px; /* remove bordas arredondadas */ 
+    padding: 10px; /* espaçamento interno */
+    font-weight: 600; /* grossura da font */
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.01); /* sombra da box */
+    cursor: pointer; /* muda o cursor para pointer ao passar o mouse */
+    transition: background-color 0.3s ease; /* adiciona transição suave na cor de fundo */
 }
 
+/* adiciona o efeito ao passar o mouse */
 .btn-default:hover {
     background-color: #ffc6d5;
 }
